--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 TOKEN=NTYwODIzNDU3NzM5NDQwMTMx.XKj0TQ.9dS6r2cOnBiPrbRcX4Tiyjyiejk
 OWNERID=402367348364935169
-MONGODB_URI=
+MONGODB_URI=91071502-27b6-470a-b4ac-c3e490644563
